apps/anki/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: anki
  labels:
    app.kubernetes.io/name: anki
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: anki
  template:
    metadata:
      labels:
        app: anki
        app.kubernetes.io/name: anki
        app.kubernetes.io/instance: anki-prod
        app.kubernetes.io/component: sync-server
    spec:
      securityContext:
        runAsUser: 52211
        runAsGroup: 52211
        fsGroup: 52211
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: anki
          image: ghcr.io/luckyturtledev/anki:26.09.2
          ports:
            - containerPort: 8080
              name: anki
          securityContext:
            privileged: false
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsUser: 52211
            runAsGroup: 52211
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          resources:
            limits:
              memory: "256Mi"
            requests:
              cpu: "5m"
              memory: "32Mi"
          volumeMounts:
            - name: storage
              mountPath: /data
      volumes:
        - name: storage
          emptyDir:
            sizeLimit: 1Gi
