apps/anki/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: anki
spec:
  ports:
    - port: 80
      targetPort: anki
  selector:
    app.kubernetes.io/name: anki
