apps/anki/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: "anki"
spec:
  podSelector: {}
  policyTypes:
    - "Egress"
    - "Ingress"
  egress: []
  ingress: []
